--- a/pages/secondary.html
+++ b/pages/secondary.html
@@ -1,34 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="secondaryPageTitle">Document</title>
-    <link rel="stylesheet" href="secondary.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title id="secondaryPageTitle">Document</title>
+  <link rel="stylesheet" href="secondary.css" />
 </head>
 
 <body>
-    <div id="classmateCard">
-        <div id="infodexLink">
-            <a href="main.html">
-                <p>INFOdex</p>
-            </a>
-        </div>
-        <div id="header">
-            <div id="photoContainer">
-
-            </div>
-            <div id="informationsContainer">
-                <div id="nameContainer"></div>
-                <div id="nicknameContainer"></div>
-            </div>
-        </div>
-        <div id="bodyDiv">
-
-        </div>
+  <div id="classmateCard">
+    <div id="infodexLink">
+      <a href="main.html">
+        <p>INFOdex</p>
+      </a>
     </div>
-    <script src="secondary.js"></script>
+    <div id="header">
+      <div id="photoContainer"></div>
+      <div id="informationsContainer">
+        <div id="nameContainer"></div>
+        <div id="nicknameContainer"></div>
+      </div>
+    </div>
+    <div id="bodyDiv"></div>
+  </div>
+  <script src="secondary.js"></script>
 </body>
 
 </html>
